fix off-center wheel in portrait & missing bottom layer of wheel background

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -29,7 +29,7 @@ html {
   --color-text-muted: var(--theme-dark-color-text-muted);
   --color-glass-background: var(--theme-dark-color-glass-background);
   --color-glass-border: var(--theme-dark-color-glass-border);
-  --color-wheel-bottom-layer-background: var(--theme-dark-wheel-bottom-layer-background);
+  --color-wheel-bottom-layer-background: var(--theme-dark-color-wheel-bottom-layer-background);
 
   --bgcolor-lightness: 40%;
   --bgcolor-chroma: 0.075;
@@ -49,7 +49,7 @@ html {
     --color-text-muted: var(--theme-light-color-text-muted);
     --color-glass-background: var(--theme-light-color-glass-background);
     --color-glass-border: var(--theme-light-color-glass-border);
-    --color-wheel-bottom-layer-background: var(--theme-light-wheel-bottom-layer-background);
+    --color-wheel-bottom-layer-background: var(--theme-light-color-wheel-bottom-layer-background);
 
     --bgcolor-lightness: 60%;
     --bgcolor-chroma: 0.15;
@@ -64,5 +64,5 @@ html.light-theme {
   --color-text-muted: var(--theme-light-color-text-muted);
   --color-glass-background: var(--theme-light-color-glass-background);
   --color-glass-border: var(--theme-light-color-glass-border);
-  --color-wheel-bottom-layer-background: var(--theme-light-wheel-bottom-layer-background);
+  --color-wheel-bottom-layer-background: var(--theme-light-color-wheel-bottom-layer-background);
 }
