--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -23,7 +23,7 @@
 
   --wheel-gradient-background-opacity: 0.5;
   --wheel-gradient-background-vibrant-opacity: 1;
-  --wheel-gradient-background-blur: 30px;
+  --wheel-gradient-background-blur: 45px;
 
   --toolbar-padding: 5px;
   --glass-panel-padding: 10px;
